[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Background.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/ReplayBackground.png" type="Texture" id=3]
[ext_resource path="res://Settings.gd" type="Script" id=4]
[ext_resource path="res://Music/GameMusic.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/SliderBackground.png" type="Texture" id=6]
[ext_resource path="res://Assets/SliderNode.png" type="Texture" id=7]
[ext_resource path="res://Assets/BackButton.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_size = 2
outline_color = Color( 0.87451, 0.443137, 0.14902, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 200, 16 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 12.0
content_margin_top = 27.0
bg_color = Color( 0.796078, 0.858824, 0.988235, 1 )
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 1

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Settings" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -132, 90 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.00296736
anchor_right = 1.0
anchor_bottom = 1.00297
margin_top = -3.57628e-07
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 287.0
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 287.0
custom_constants/margin_right = 65
custom_constants/margin_top = 15
custom_constants/margin_left = 65
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
margin_left = 65.0
margin_top = 15.0
margin_right = 435.0
margin_bottom = 222.0
custom_constants/separation = 25
alignment = 1

[node name="TitleContainer" type="CenterContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 370.0
margin_bottom = 57.0

[node name="SettingsLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/TitleContainer"]
margin_left = 86.0
margin_right = 283.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 370.0
margin_bottom = 207.0
size_flags_vertical = 3

[node name="MusicSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.501484
anchor_right = 0.5
anchor_bottom = 0.501484
margin_top = -9.0
margin_right = 200.0
margin_bottom = 7.0
custom_icons/tick = ExtResource( 6 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 1.0
step = 0.05
value = 0.45
tick_count = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.54
anchor_bottom = 0.508902
margin_left = -200.0
margin_top = -18.5
margin_right = -55.9999
margin_bottom = 8.50002
rect_pivot_offset = Vector2( 136, 36 )
custom_fonts/font = SubResource( 4 )
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXSlider" type="HSlider" parent="."]
margin_left = 300.0
margin_top = 214.0
margin_right = 500.0
margin_bottom = 230.0
custom_icons/tick = ExtResource( 6 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
max_value = 1.0
step = 0.05
value = 0.55
tick_count = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.54
anchor_bottom = 0.508902
margin_left = -200.0
margin_top = 35.5
margin_right = -55.9999
margin_bottom = 62.5
custom_fonts/font = SubResource( 4 )
text = "SFX Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[node name="Back" type="Button" parent="."]
pause_mode = 2
margin_left = 75.0
margin_top = 75.0
margin_right = 107.0
margin_bottom = 107.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="MusicSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
